fix: use scroll-visibility directive for timeline component

--- a/src/app/timeline/timeline.component.scss
+++ b/src/app/timeline/timeline.component.scss
@@ -13,24 +13,24 @@
   margin: 2em 0;
 }
 
-.timeline > div {
+.timeline-item {
   padding: 1em;
   position: relative;
   width: 50%;
   opacity: 0;
-  transform: translateY(20px);
+  display: none;
   transition: opacity 0.6s ease-out, transform 0.6s ease-out;
 }
 
-.timeline > div.left {
+.timeline-item.left {
   left: -10%;
 }
 
-.timeline > div.right {
+.timeline-item.right {
   left: 60%;
 }
 
-.timeline > div .content {
+.timeline-item .content {
   padding: 1em;
   background-color: #333;
   position: relative;
@@ -50,7 +50,7 @@
   z-index: -1;
 }
 
-.timeline > div .circle {
+.timeline-item .circle {
   position: fixed;
   width: 2.3em;
   height: 2.3em;
@@ -62,30 +62,48 @@
   z-index: 1;
 }
 
-.timeline > div.left .circle {
+.timeline-item.left .circle {
   left: 30em; /* Move the left content circle more to the right */
 }
 
-.timeline > div.right .circle {
+.timeline-item.right .circle {
   left: -5em; /* Move the right content circle more to the left */
 }
 
+.timeline-item.in-view {
+  display: block;
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.timeline-item.out-of-view {
+  display: none;
+  opacity: 0;
+}
+
+.timeline-item.left.in-view {
+  animation: slideInLeft 1s ease-out forwards;
+}
+
+.timeline-item.right.in-view {
+  animation: slideInRight 1s ease-out forwards;
+}
 
 @media screen and (min-width: 128px) and (max-width: 900px) {
-  .timeline > div {
+  .timeline-item {
     width: 100%;
     left: 0 !important;
   }
 
   /*align circles to the left*/
-  .timeline > div.left .circle,
-  .timeline > div.right .circle {
+  .timeline-item.left .circle,
+  .timeline-item.right .circle {
     left: 0;
     width: 2em;
     height: 2em;
   }
 
-  .timeline > div .circle {
+  .timeline-item .circle {
     left: 50%;
     margin-left: -12.5px;
   }
@@ -94,12 +112,3 @@
     transform: none;
   }
 }
-
-.timeline > div.in-view {
-  opacity: 1;
-  transform: translateY(0);
-}
-
-
-
-
